# dirigo

./: .gitignore  README.md  check_frame_calibration.py  pyproject.toml  serialization_test.py  setup.py  tiff_inspect.py
config/: system_config.toml
config/acquisition/frame/: default.toml
config/acquisition/linescan/: default.toml
config/digitizer/: default.toml
dirigo/: __init__.py  init.py  main.py  main2.py  plugin_registry.py  reference_gui.py  units.py
dirigo/builtins/: acquisitions.py  displays.py  processors.py  scanners.py  test.py
dirigo/components/: __init__.py  digitizer.py  hardware.py  io.py  optics.py  profiling.py  scanner.py  units.py  utilities.py
dirigo/config/: form_generator.py  loader.py  schema.py  system_config.py  wizard.py
dirigo/core/: device.py
dirigo/devices/optics/: interface.py
dirigo/devices/optics/plugins/: camera_optics.py  laser_scanning_optics.py
dirigo/devices/scanner/: interface.py
dirigo/hw_interfaces/: __init__.py  beam_attenuator.py  camera.py  camera_old.py  detector.py  detectors.py  digitizer.py  encoder.py  geometry.py  hw_interface.py  illuminator.py  image_transport.py  mfio.py  optic.py  scanner.py  scanner_notes.txt  shutter.py  stage.py
dirigo/interfaces/: __init__.py  acquisition.py  digitizer.py  scanner.py  stage.py
dirigo/plugins/: __init__.py  acquisitions.py  alazar.py  beam_attenuators.py  calibrations.py  detectors.py  digitizers.py  displays.py  encoders.py  illuminators.py  loaders.py  loggers.py  processors.py  scanners.py  scanners_old.py  shutters.py  test_file.py  writers.py
dirigo/sw_interfaces/: __init__.py  acquisition.py  display.py  logger.py  processor.py  worker.py  writer.py
docs/: Makefile  conf.py  getting-started.md  requirements.txt
docs/concepts/: architecture.md
docs/reference/: api.md
examples/: system_config.toml
scripts/: calibrate_line_distortion.py  calibrate_line_gradient.py  calibrate_signal_offsets.py  calibrate_stage_scanner_angle.py  calibrate_trigger_delay.py  calibrate_trigger_error.py  check_line_distortion.py  check_trigger_delay.py  view_bidi_calibration.py  view_line_gradient_calibration.py
tests/: raster_frame.py  test_devices.py
