[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo"
version = "0.4.0"
description = "Dirigo is a collection of interfaces for customizable image data acquisition"
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = [
    "numba",
    "scipy", "scipy-stubs",
    "tomlkit",
    "pydantic",
    "platformdirs",
    "tifffile",
    "nidaqmx"
]

[project.entry-points."dirigo_acquisitions"]
raster_line  = "dirigo.plugins.acquisitions:LineAcquisition"
raster_frame = "dirigo.plugins.acquisitions:FrameAcquisition"
raster_stack = "dirigo.plugins.acquisitions:StackAcquisition"
# calibrations (create data for calibrations)
trigger_delay_calibration = "dirigo.plugins.calibrations:TriggerDelayCalibration"
stage_translation_calibration = "dirigo.plugins.calibrations:StageTranslationCalibration"
laser_frequency_calibration = "dirigo.plugins.calibrations:LaserPulseFrequencyCalibration"

[project.entry-points."dirigo_loaders"]
raw_raster_frame = "dirigo.plugins.loaders:RawRasterFrameLoader"

[project.entry-points."dirigo_processors"]
raster_frame = "dirigo.plugins.processors:RasterFrameProcessor"
line_camera_line = "dirigo.plugins.processors:LineCameraLineProcessor"
rolling_average = "dirigo.plugins.processors:RollingAverageProcessor"

[project.entry-points."dirigo_color_vectors"]
gray = "dirigo.plugins.displays:Gray"
red = "dirigo.plugins.displays:Red"
green = "dirigo.plugins.displays:Green"
blue = "dirigo.plugins.displays:Blue"
cyan = "dirigo.plugins.displays:Cyan"
magenta = "dirigo.plugins.displays:Magenta"
yellow = "dirigo.plugins.displays:Yellow"

[project.entry-points."dirigo_transfer_functions"]
gamma = "dirigo.plugins.displays:Gamma"
inverted_gamma = "dirigo.plugins.displays:InvertedGamma"

[project.entry-points."dirigo_displays"] # e.g. display processors
frame = "dirigo.plugins.displays:FrameDisplay"

[project.entry-points."dirigo_loggers"]
tiff = "dirigo.plugins.loggers:TiffLogger"
# special calibration loggers
trigger_delay_calibration = "dirigo.plugins.calibrations:TriggerDelayCalibrationLogger"
line_distortion_calibration = "dirigo.plugins.calibrations:LineDistortionCalibrationLogger"
stage_scanner_angle_calibration = "dirigo.plugins.calibrations:StageScannerAngleCalibrationLogger"
signal_offset_calibration = "dirigo.plugins.calibrations:SignalOffsetCalibrationLogger"
line_gradient_calibration = "dirigo.plugins.calibrations:LineGradientCalibrationLogger"

[project.entry-points."dirigo_encoders"]
linear_encoders_via_ni = "dirigo.plugins.encoders:MultiAxisLinearEncodersViaNI"

[project.entry-points."dirigo_scanners"]
resonant_scanner_via_ni = "dirigo.plugins.scanners:ResonantScannerViaNI"
polygon_scanner_via_ni = "dirigo.plugins.scanners:PolygonScannerViaNI"
fast_galvo_scanner_via_ni = "dirigo.plugins.scanners:FastGalvoScannerViaNI"
slow_galvo_scanner_via_ni = "dirigo.plugins.scanners:SlowGalvoScannerViaNI"

[project.entry-points."dirigo_illuminators"]
led_via_ni = "dirigo.plugins.illuminators:LEDViaNI"

[project.entry-points."dirigo_digitizers"]
ni = "dirigo.plugins.digitizers:NIDigitizer"

[project.entry-points."dirigo_detectors"]
generic = "dirigo.plugins.detectors:GenericDetector"

[project.entry-points."dirigo.devices.optics"]
camera_optics = "dirigo.devices.optics.plugins.camera_optics:CameraOptics"
laser_scanning_optics = "dirigo.devices.optics.plugins.laser_scanning_optics:LaserScanningOptics"

[project.entry-points."dirigo.devices.scanners"]
resonant_scanner_via_ni = "dirigo.devices.scanners.plugins.resonant_scanner_via_ni:ResonantScannerViaNIDevice"

[project.entry-points."dirigo.devices.digitizers"]
ni = "dirigo.devices.digitizers.plugins.ni_digitizer:NiDigitizerDevice"

